--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Introduction to JavaScript</h1>
+    <button id="myButton">Click me</button>
     <script src="hello.js"></script>
 </body>
 </html>
