--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Introduction to JavaScript</h1>
-    <button id="myButton">Click me</button>
-    <script src="hello.js"></script>
+    <input type="text" id="task" placeholder="Add a new task">
+    <button id="add-button">Add</button>
+    <ul id="todo-list"></ul>
+    <script src="index.js"></script>
 </body>
 </html>
